--- a/app/views/irm/ldap_auth_headers/index.html.erb
+++ b/app/views/irm/ldap_auth_headers/index.html.erb
@@ -1,41 +1,24 @@
 <%= common_title %>
-<div class="listRelatedObject setupBlock">
-    <div class="page-block">
-      <div class="pbHeader">
-        <table cellpadding="0" cellspacing="0" border="0">
-          <tbody>
-            <tr>
-              <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_ldap_auth_header_list) %></h2></td>
-              <td id="topButtonRow" class="pbButton">
-                <div class="button"><%= link_to t(:new), {:action => "new"}%></div>
-              </td>
-              <td class="pbHelp">
-                <div id="ldap_auth_headersSearchBox"></div>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="pbBody">
-        <div id="ldap_auth_headers" class="datatable" style="width:100%">
-          <div id="id" style="display:none">
-            <%= link_to(t(:edit),{:controller => "irm/ldap_auth_headers",:action=>"edit",:id=>"{id}"}) %>|
-            <%= link_to(t(:show),{:controller => "irm/ldap_auth_headers",:action=>"show",:id=>"{id}"}) %>
-          </div>
-          <div id="status_code" style="display:none">
-            <%= check_img("{status_code}") %>
-          </div>
-        </div>
-        <%= datatable("ldap_auth_headers",{:action=>"get_data",:format=>"json"},
-                      [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"80px"},
-                                              { :key => "ldap_source_name", :label => t(:ldap_auth_header_ldap_source),:searchable=>true },
-                                              { :key => "name", :label => t(:ldap_auth_header_auth_code),:searchable=>true },
-                                              { :key => "auth_cn", :label => t(:ldap_auth_header_auth_cn),:searchable=>true },
-                                              { :key => "description", :label => t(:ldap_auth_header_description),:searchable=>true },
-                                              { :key => "status_code",:label=>t(:active),:formatter=>"Y.irm.template", :width => "40px"}],
-                                              {:row_perpage=>20,:search_box=>"ldap_auth_headersSearchBox"})%>
-      </div>
+<!--页面结构-->
+<div class="page-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%= t(:label_ldap_auth_header_list) %></h2>
+    </td>
+    <td class="page-block-button">
+      <%= link_to t(:new), { :action => "new"},:class=>"btn"%>
+    </td>
+    <td class="page-block-help">
+      <div id="ldap_auth_headersSearchBox"></div>
+    </td>
+  </tr></table>
+  <div class="page-block-body">
+    <div id="ldap_auth_headers">
+      <%= datatable("ldap_auth_headers",{:action=>"get_data",:format=>"json"},[],{:search_box=>"ldap_auth_headersSearchBox",:paginator_box=>"ldap_auth_headersPaginator"})%>
     </div>
+    <div id="ldap_auth_headersPaginator"></div>
+  </div>
 </div>
+
 
 
