--- a/app/views/irm/ldap_auth_headers/show.html.erb
+++ b/app/views/irm/ldap_auth_headers/show.html.erb
@@ -1,109 +1,92 @@
 <%= common_title(:show_data=>@ldap_auth_header[:name]) %>
 
-<div id="ep" class="detail-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
+<!--页面结构-->
+<div class="show-block">
+  <table class="page-block-header">
+    <tr>
+        <td class="page-block-title">
+          <h2 class="block-title"><%= t(:label_irm_ldap_auth_header_name) %></h2>
+        </td>
+        <td class="page-block-button">
+          <%= link_to t(:edit), {:action => "edit", :id => @ldap_auth_header},:class=>"btn btn-primary"%>
+          <%= link_to t(:back), {:action => "index"},:class=>"btn" %>
+        </td>
+    </tr>
+  </table>
+  <!-- 一般信息 -->
+  <table class="page-block-header">
+    <tr>
+      <td class="page-block-title"><h2 class="block-title"><%= t(:label_common_info) %>:</h2></td>
+    </tr>
+  </table>
+  <div class="page-block-body">
+    <table class="show-table">
       <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_irm_ldap_auth_header_name) %></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= link_to t(:edit), {:action => "edit", :id => @ldap_auth_header}%></div>
-            <div class="button"><%= link_to t(:back), {:action => "index"}%></div>
-          </td>
-        </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :ldap_auth_header_auth_name)%></label></td>
+            <td class="data-col"><div><%=@ldap_auth_header.name%></div></td>
+            <td class="label-col empty"><div>&nbsp;</div></td>
+            <td class="data-col empty"><div>&nbsp;</div></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :ldap_auth_header_ldap_source)%></label></td>
+            <td class="data-col"><div><%=@ldap_auth_header[:ldap_source_name]%></div></td>
+            <td class="label-col empty"><div>&nbsp;</div></td>
+            <td class="data-col empty"><div>&nbsp;</div></td>
+          </tr>
+
+          <tr>
+            <td class="label-col"><label><%=(t :ldap_auth_header_auth_cn)%></label></td>
+            <td class="data-col"><div><%=@ldap_auth_header.auth_cn%></div></td>
+            <td class="label-col empty"><div>&nbsp;</div></td>
+            <td class="data-col empty"><div>&nbsp;</div></td>
+          </tr>
+
+          <tr>
+            <td class="label-col"><label><%=(t :ldap_auth_header_ldap_login_name_attr)%></label></td>
+            <td class="data-col"><div><%=@ldap_auth_header.ldap_login_name_attr%></div></td>
+            <td class="label-col empty"><div>&nbsp;</div></td>
+            <td class="data-col empty"><div>&nbsp;</div></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :ldap_auth_header_ldap_email_address_attr)%></label></td>
+            <td class="data-col"><div><%=@ldap_auth_header.ldap_email_address_attr%></div></td>
+            <td class="label-col empty"><div>&nbsp;</div></td>
+            <td class="data-col empty"><div>&nbsp;</div></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :ldap_auth_header_template_person)%></label></td>
+            <td class="data-col"><div><%=@ldap_auth_header.template_person_name%></div></td>
+            <td class="label-col empty"><div>&nbsp;</div></td>
+            <td class="data-col empty"><div>&nbsp;</div></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :ldap_auth_header_description)%></label></td>
+            <td class="data-col"><div><%=@ldap_auth_header.description%></div></td>
+            <td class="label-col empty"><div>&nbsp;</div></td>
+            <td class="data-col empty"><div>&nbsp;</div></td>
+          </tr>
       </tbody>
     </table>
   </div>
-  <div class="pbBody">
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-              <td class="labelCol"><label><%=(t :ldap_auth_header_auth_code)%></label></td>
-              <td class="dataCol"><div><%=@ldap_auth_header.name%></div></td>
-              <td class="labelCol empty"><div>&nbsp;</div></td>
-              <td class="dataCol empty"><div>&nbsp;</div></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :ldap_auth_header_ldap_source)%></label></td>
-              <td class="dataCol"><div><%=@ldap_auth_header[:ldap_source_name]%></div></td>
-              <td class="labelCol empty"><div>&nbsp;</div></td>
-              <td class="dataCol empty"><div>&nbsp;</div></td>
-            </tr>
-
-            <tr>
-              <td class="labelCol"><label><%=(t :ldap_auth_header_auth_cn)%></label></td>
-              <td class="dataCol"><div><%=@ldap_auth_header.auth_cn%></div></td>
-              <td class="labelCol empty"><div>&nbsp;</div></td>
-              <td class="dataCol empty"><div>&nbsp;</div></td>
-            </tr>
-
-            <tr>
-              <td class="labelCol"><label><%=(t :ldap_auth_header_ldap_login_name_attr)%></label></td>
-              <td class="dataCol"><div><%=@ldap_auth_header.ldap_login_name_attr%></div></td>
-              <td class="labelCol empty"><div>&nbsp;</div></td>
-              <td class="dataCol empty"><div>&nbsp;</div></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :ldap_auth_header_ldap_email_address_attr)%></label></td>
-              <td class="dataCol"><div><%=@ldap_auth_header.ldap_email_address_attr%></div></td>
-              <td class="labelCol empty"><div>&nbsp;</div></td>
-              <td class="dataCol empty"><div>&nbsp;</div></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :ldap_auth_header_template_person)%></label></td>
-              <td class="dataCol"><div><%=@ldap_auth_header.template_person_name%></div></td>
-              <td class="labelCol empty"><div>&nbsp;</div></td>
-              <td class="dataCol empty"><div>&nbsp;</div></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :ldap_auth_header_description)%></label></td>
-              <td class="dataCol"><div><%=@ldap_auth_header.description%></div></td>
-              <td class="labelCol empty"><div>&nbsp;</div></td>
-              <td class="dataCol empty"><div>&nbsp;</div></td>
-            </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
 </div>
-
-<div class="listRelatedObject setupBlock">
-    <div class="page-block">
-      <div class="pbHeader">
-        <table cellpadding="0" cellspacing="0" border="0">
-          <tbody>
-            <tr>
-              <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_irm_object_attributes) %></h2></td>
-              <td class="pbButton">
-                <div class="button"><%= link_to t(:new), {:controller => "irm/ldap_auth_attributes", :action => "new", :ah_id => @ldap_auth_header.id}%></div>
-              </td>
-              <td class="pbHelp">
-                <div id="object_attributesSearchBox"></div>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="pbBody">
-        <div id="ldap_auth_attributes" class="datatable" style="width:100%">
-          <div id="id" style="display:none">
-            <%= link_to(t(:edit),{:controller => "irm/ldap_auth_attributes", :action => "edit", :ah_id => @ldap_auth_header.id,:id=>"{id}"}) %>
-            <%= link_to(t(:show),{:controller => "irm/ldap_auth_attributes", :action => "show", :ah_id => @ldap_auth_header.id,:id=>"{id}"}) %>
-            <%= link_to(t(:delete),{:controller => "irm/ldap_auth_attributes", :action => "destroy", :ah_id => @ldap_auth_header.id,:id=>"{id}"},{:method => :delete,:confirm => t(:label_are_you_sure)}) %>
-          </div>
-          <div id="status_code" style="display:none">
-            <%= check_img("{status_code}") %>
-          </div>
-        </div>
-        <%= datatable("ldap_auth_attributes",{:controller => "irm/ldap_auth_attributes", :action => "get_data", :ah_id => @ldap_auth_header.id,:format=>"json"},
-                      [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"110px"},
-                       { :key => "local_attr", :label => t(:label_ldap_auth_attribute_local_attr),:searchable=>true,:width=>"200px" },
-                       { :key => "ldap_attr", :label => t(:label_ldap_auth_attribute_ldap_attr)},
-                       { :key => "description", :label => t(:ldap_auth_header_description),:searchable=>true },
-                       { :key => "status_code",:label=>t(:active),:formatter=>"Y.irm.template", :width => "40px"}
-                      ],{:search_box=>"object_attributesSearchBox"})%>
-
-      </div>
+<!--页面结构-->
+<div class="page-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%= t(:label_irm_object_attributes) %></h2>
+    </td>
+    <td class="page-block-button">
+      <%= link_to t(:new), {:controller => "irm/ldap_auth_attributes", :action => "new", :ah_id => @ldap_auth_header.id},:class => "btn"%>
+    </td>
+    <td class="page-block-help">
+      <div id="object_attributesSearchBox"></div>
+    </td>
+  </tr></table>
+  <div class="page-block-body">
+    <div id="ldap_auth_attributes">
+      <%= datatable("ldap_auth_attributes",{:controller => "irm/ldap_auth_attributes", :action => "get_data", :ah_id => @ldap_auth_header.id,:format=>"json"},[],{:search_box=>"object_attributesSearchBox",:paginator_box=>"object_attributesPaginator"})%>
     </div>
+    <div id="object_attributesPaginator"></div>
+  </div>
 </div>
