--- a/app/views/irm/functions/index.html.erb
+++ b/app/views/irm/functions/index.html.erb
@@ -1,38 +1,26 @@
 <%= setting_title %>
-<div class="listRelatedObject setupBlock">
-    <div class="page-block">
-      <div class="pbHeader">
-        <table cellpadding="0" cellspacing="0" border="0">
-          <tbody>
-            <tr>
-              <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_irm_function_list) %></h2></td>
-              <td id="topButtonRow" class="pbButton">
-                <div class="button"><%= link_to t(:new), {:action => "new"}%></div>
-              </td>
-              <td class="pbHelp">
-                <div id="functionsSearchBox"></div>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="pbBody">
-        <div id="functions_list" class="datatable" style="width:100%">
-          <div id="id" style="display:none">
-            <%= link_to(t(:edit),{:action=>"edit",:id=>"{id}"}) %>&nbsp;&nbsp;<%= link_to(t(:show),{:action=>"show",:id=>"{id}"}) %>
-          </div>
-          <div id="status_code" style="display:none">
-            <%= check_img("{status_code}") %>
-          </div>                       
-        </div>
-        <%= datatable("functions_list",{:action=>"get_data",:format=>"json"},
-                      [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template", :width => "80px"},
-                       {:key=>"code",:label=>t(:label_irm_function_function_code),:searchable=>true},
-                       {:key=>"name",:label=>t(:label_irm_function_name),:searchable=>true},
-                       {:key=>"description",:label=>t(:label_irm_function_description)},
-                       {:key=>"status_code",:label=>t(:active),:formatter=>"Y.irm.template"}],
-                       {:search_box=>"functionsSearchBox",:paginator_box=>"functionPaginator"}) %>
-        <div id="functionPaginator"></div>
-      </div>
+
+<!--页面结构-->
+<div class="page-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%= t(:label_irm_function_list) %></h2>
+    </td>
+    <td class="page-block-button">
+      <%= link_to t(:new), {:action => "new"},:back=>true,:class=>"btn"%>
+    </td>
+    <td class="page-block-help">
+      <div id="searchBox"></div>
+    </td>
+  </tr></table>
+  <div class="page-block-body">
+    <%= datatable("functions_list",{:action=>"get_data",:format=>"json"},
+                  [],{:search_box=>"searchBox",:paginator_box=>"paginator"}) %>
     </div>
+  </div>
 </div>
+
+
+
+
+
