--- a/app/views/irm/menus/index.html.erb
+++ b/app/views/irm/menus/index.html.erb
@@ -14,13 +14,7 @@
     </td>
   </tr></table>
   <div class="page-block-body">
-    <%= datatable("menus_list",{:action=>"get_data",:format=>"json"},
-                  [{:key=>"id",:label=>t(:operation)},
-                   {:key=>"code",:label=>t(:label_irm_menu_menu_code),:searchable=>true},
-                   {:key=>"name",:label=>t(:label_irm_menu_name),:searchable=>true},
-                   {:key=>"description",:label=>t(:label_irm_menu_description)},
-                   {:key=>"status_code",:label=>t(:active)}],
-                   {:search_box=>"searchBox",:paginator_box=>"paginator",:select => 'multiple'}) %>
+    <%= datatable("menus_list",{:action=>"get_data",:format=>"json"},[],{:search_box=>"searchBox",:paginator_box=>"paginator"}) %>
 
     </div>
   </div>
